--- a/.goreleaser_github.yml
+++ b/.goreleaser_github.yml
@@ -3,7 +3,7 @@ builds:
     main: ./cmd/tfsecurity
     binary: tfsecurity
     ldflags:
-      - "-X github.com/khulnasoft-labs/tfsecurity/version.Version={{.Tag}} -s -w -extldflags '-fno-PIC -static'"
+      - "-X github.com/khulnasoft-lab/tfsecurity/version.Version={{.Tag}} -s -w -extldflags '-fno-PIC -static'"
     env:
       - CGO_ENABLED=0
     goos:
@@ -17,7 +17,7 @@ builds:
     main: ./cmd/tfsecurity-checkgen
     binary: tfsecurity-checkgen
     ldflags:
-      - "-X github.com/khulnasoft-labs/tfsecurity/version.Version={{.Tag}} -s -w -extldflags '-fno-PIC -static'"
+      - "-X github.com/khulnasoft-lab/tfsecurity/version.Version={{.Tag}} -s -w -extldflags '-fno-PIC -static'"
     env:
       - CGO_ENABLED=0
     goos:
@@ -44,7 +44,7 @@ signs:
 
 dockers:
   - image_templates:
-      ["ghcr.io/khulnasoft-labs/{{ .ProjectName }}:{{ .Tag }}-amd64"]
+      ["ghcr.io/khulnasoft-lab/{{ .ProjectName }}:{{ .Tag }}-amd64"]
     ids:
       - tfsecurity
     dockerfile: Dockerfile
@@ -52,7 +52,7 @@ dockers:
     build_flag_templates:
       - --platform=linux/amd64
   - image_templates:
-      ["ghcr.io/khulnasoft-labs/{{ .ProjectName }}:{{ .Tag }}-arm64v8"]
+      ["ghcr.io/khulnasoft-lab/{{ .ProjectName }}:{{ .Tag }}-arm64v8"]
     ids:
       - tfsecurity
     goarch: arm64
@@ -61,7 +61,7 @@ dockers:
     build_flag_templates:
       - --platform=linux/arm64/v8
   - image_templates:
-      ["ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:{{ .Tag }}-amd64"]
+      ["ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:{{ .Tag }}-amd64"]
     ids:
       - tfsecurity
     dockerfile: Dockerfile
@@ -69,7 +69,7 @@ dockers:
     build_flag_templates:
       - --platform=linux/amd64
   - image_templates:
-      ["ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:{{ .Tag }}-arm64v8"]
+      ["ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:{{ .Tag }}-arm64v8"]
     ids:
       - tfsecurity
     goarch: arm64
@@ -78,7 +78,7 @@ dockers:
     build_flag_templates:
       - --platform=linux/arm64/v8
   - image_templates:
-      ["ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:{{ .Tag }}-amd64"]
+      ["ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:{{ .Tag }}-amd64"]
     ids:
       - tfsecurity
     dockerfile: Dockerfile.scratch
@@ -86,7 +86,7 @@ dockers:
     build_flag_templates:
       - --platform=linux/amd64
   - image_templates:
-      ["ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:{{ .Tag }}-arm64v8"]
+      ["ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:{{ .Tag }}-arm64v8"]
     ids:
       - tfsecurity
     dockerfile: Dockerfile.scratch
@@ -94,7 +94,7 @@ dockers:
     build_flag_templates:
       - --platform=linux/arm64/v8
   - image_templates:
-      ["ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:{{ .Tag }}-amd64"]
+      ["ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:{{ .Tag }}-amd64"]
     ids:
       - tfsecurity
     dockerfile: Dockerfile.ci
@@ -102,7 +102,7 @@ dockers:
     build_flag_templates:
       - --platform=linux/amd64
   - image_templates:
-      ["ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:{{ .Tag }}-arm64v8"]
+      ["ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:{{ .Tag }}-arm64v8"]
     ids:
       - tfsecurity
     dockerfile: Dockerfile.ci
@@ -111,55 +111,55 @@ dockers:
       - --platform=linux/arm64/v8
 
 docker_manifests:
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}:{{ .Tag }}"
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}:{{ .Tag }}"
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}:latest"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}:latest"
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}"
     skip_push: auto
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:{{ .Tag }}"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:{{ .Tag }}"
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:latest"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:latest"
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:v{{ .Major }}.{{ .Minor }}"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:v{{ .Major }}.{{ .Minor }}"
     skip_push: auto
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-alpine:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:{{ .Tag }}"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-alpine:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:{{ .Tag }}"
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:latest"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:latest"
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:v{{ .Major }}.{{ .Minor }}"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:v{{ .Major }}.{{ .Minor }}"
     skip_push: auto
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-scratch:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:{{ .Tag }}"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-scratch:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:{{ .Tag }}"
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:latest"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:latest"
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:{{ .Tag }}-amd64
-  - name_template: "ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:v{{ .Major }}.{{ .Minor }}"
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:{{ .Tag }}-amd64
+  - name_template: "ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:v{{ .Major }}.{{ .Minor }}"
     skip_push: auto
     image_templates:
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:{{ .Tag }}-arm64v8
-      - ghcr.io/khulnasoft-labs/{{ .ProjectName }}-ci:{{ .Tag }}-amd64
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:{{ .Tag }}-arm64v8
+      - ghcr.io/khulnasoft-lab/{{ .ProjectName }}-ci:{{ .Tag }}-amd64
